[gd_scene load_steps=4 format=3 uid="uid://d2t0hplf3icgu"]

[ext_resource type="Texture2D" uid="uid://dfvbdqx0131f6" path="res://background.png" id="1_bg"]
[ext_resource type="Script" uid="uid://ddhgyapf56vnf" path="res://scenes/LanguageMenu.gd" id="1_lang_script"]
[ext_resource type="Texture2D" uid="uid://br156j4b7cu" path="res://select_language.png" id="2_6gbw0"]

[node name="LanguageMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lang_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bg")
expand_mode = 1
stretch_mode = 6

[node name="LanguagePanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0

[node name="SelectLanguage" type="Sprite2D" parent="LanguagePanel"]
position = Vector2(699, 380)
texture = ExtResource("2_6gbw0")

[node name="BtnKG" type="TextureButton" parent="LanguagePanel"]
layout_mode = 1
offset_left = 345.0
offset_top = 320.0
offset_right = 550.0
offset_bottom = 529.0
focus_mode = 0

[node name="BtnRU" type="TextureButton" parent="LanguagePanel"]
layout_mode = 1
offset_left = 591.0
offset_top = 327.0
offset_right = 800.0
offset_bottom = 532.0
focus_mode = 0

[node name="BtnEN" type="TextureButton" parent="LanguagePanel"]
layout_mode = 0
offset_left = 839.0
offset_top = 324.0
offset_right = 1048.0
offset_bottom = 529.0
focus_mode = 0
